--- a/client/src/index.html
+++ b/client/src/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Tutoría UDH</title>
+    <title>Eventos UDH</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link
+      id="app-theme"
+      rel="stylesheet"
+      type="text/css"
+      href="theme-dark.css"
+    />
   </head>
-  <body>
+  <body class="p-0 m-0">
     <app-root></app-root>
   </body>
 </html>
